@@ -1,5 +1,3 @@
-AUTOMAKE_OPTIONS = gnu
-
 # clean autogenerated files
 MAINTAINERCLEANFILES = \
 HexDLParser.hpp \
